# 560proj

./: .gitmodules  560proj.py  README.md  details.md  prepareData.py  pyproject.toml  sa.sl  so.sl  test.py  utils.py  wf.sl
FINAL/: DATA.xlsx
MIDTERM REPORT/: 560 Project.docx
model/: ckpt.py  sa.py  so.py  wf.py
testout/: wav.npy
